Modified the points where the interpreter should pause after a command gets executed.